--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
     tools:context="com.example.test.MainActivity" >
 
@@ -13,9 +13,15 @@
 
     <Button
         android:id="@+id/btn_gray"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="native method test" />
+        android:text="Native Test" />
+
+    <Button
+        android:id="@+id/btn_feature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show Me Feature" />
 
     <ImageView
         android:id="@+id/image_view"
