--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/btn_feature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Show Me Feature" />
+        android:text="->Next" />
 
     <ImageView
         android:id="@+id/image_view"
